--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,17 +3,17 @@
     align-content: center;
 }
 
-.body {
+body {
     box-align: center;
     background-image: url("../images/beige-tiles.png")
 }
 
-.header {
+header {
     background-color: #ffffff;
     border-style: solid;
     border-width: 0px 0px 1px 0px;
     border-color: #cccccc;
-    height: 50px;
+    height: 72px;
     width: 100%;
     position: absolute;
     top: 0px;
@@ -23,7 +23,9 @@
 
 .header-content {
     width: 960px;
-    
+    position: absolute;
+    top: 0px;
+    left: 200px;  
 }
 
 .name {
@@ -35,6 +37,8 @@
       font-size: 28px;
       font-weight: bold;
       top: 0;
+      position: relative;
+      
 }
 
 ul {
@@ -63,6 +67,12 @@ li a:hover {
     color: #111;
 }
 
+#button {
+    background-color: #4aaaa5;
+    color: white;
+    
+}
+
 .img {
     float: left;
     margin: 0px 10px 0px 0px;
@@ -71,25 +81,26 @@ li a:hover {
 #p2 {
     clear: left;
 }
+
 p {
     color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    line-height: 1.5;
+    
 }
 
-h2 {
-      color: #777777;
+h5 {
+      color: white;
+      z-index: 1;
+      font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+      text-align: center;
 }
 
 h1 {
     color: #4aaaa5;
 }
-.wrapper {
-      width: 960px;
-      align-content: center;
-      padding: 20px;
-      border: 5px;
-}
 
-.footer {
+footer {
     position: fixed;
     left: 0;
     bottom: 0;
@@ -102,4 +113,40 @@ h1 {
     border-width: 5px 0px 0px 0px;
     border-color: #4aaaa5;
     border-style: solid;
+}
+
+.image {
+    float: left;
+    margin: 30px 10px 0px 10px;
+    position: relative;
+}
+
+.text-block {
+    background-color: #4aaaa5;
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    
+}
+
+#textarea {
+    height: 250px;
+    width: 900px;
+}
+
+#name, #email {
+    width: 900px;
+}
+
+.container {
+    background-color: white;
+    width: 960px;
+    text-align: left;
+    padding: 20px;
+    border: 5px;
+    margin: 20px 200px 20px 200px;
+}
+
+.clearfix {
+    overflow: auto;
 }
